# firmware

./: BLE_MUX_DESIGN_DOC.md  CHANGELOG.md  Cargo.toml  PROTOCOL.md  README.md  TODO.md  build.rs  justfile  mise.toml
.cargo/: config.toml
docs/: semtech_lora_cad_lbt_guidebook.md
docs/audit/: 01-recon.md  02-threats.md  03-findings-draft.md  REPORT.md
ld/: nrf52840-memory.x  rp2040-memory.x  wio_tracker_l1-memory.x
src/: channel.rs  debug_blink.rs  display.rs  lbt.rs  main.rs  protocol.rs  radio.rs
src/board/: PORTING.md  elecrow_thinknode_m2.rs  esp32.rs  esp32s3.rs  heltec_mesh_node_t114.rs  heltec_v3.rs  heltec_v3_uart.rs  heltec_v4.rs  lilygo_tbeam.rs  lilygo_tbeam_supreme.rs  mod.rs.j2  rak_wisblock_4631.rs  traits.rs  waveshare_rp2040_lora.rs  wio_tracker_l1.rs
src/display/: qr.rs  render_color.rs
src/driver/: axp.rs  inverted_pin.rs  mod.rs  sh1106.rs  st7789.rs
src/hal/: esp32.rs  esp32s3.rs  mod.rs  nrf52840.rs  rp2040.rs
src/host/: framing.rs  mod.rs  uart.rs  usb.rs
